# Face-Anti-Spoofing

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  environment.yaml  face_capture.py  main.py  pyproject.toml  requirements.txt  setup.bat
.obsidian/: workspace.json
face_antispoofing/: face_capture.py  main.py
face_antispoofing/antispoofing/: antispoof.py
face_antispoofing/detection/: cascade_detection.py  face_detector.py  mtcnn_detection.py
notebooks/: FaceAntiSpoofing.ipynb
